[project]
name = "langchainlearing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.4",
    "langchain[openai]>=1.3.2",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.2",
    "dotenv>=0.9.9",
]
